<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Navigator 3</string>
    <string name="title_activity_order_details">OrderDetails</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_swipe">Swipe</string>
    <string name="title_activity_main_taxometr">Main_taxometr</string>
    <string name="title_activity_taxometr_load_">Taxometr_load_Activity</string>
    <string name="no_gps_connection">GPS выключен. Перейти в настройки?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="driver_status_changed_on_busy">Вы изменили свой статус на ЗАНЯТ</string>
    <string name="format_price"><xliff:g id="price">%.2f</xliff:g>\u20B4</string>
    <string name="ofOrders">Заказов</string>
    <string name="ether">Эфир</string>
    <string name="km">км</string>
    <string name="noFeature">Без дополнительных условий</string>
    <string name="decline">ОТКЛОНИТЬ</string>
    <string name="accept">ПРИНЯТЬ</string>
    <string name="noRegion">Регион не указан</string>
    <string name="noClient">НЕТ КЛИЕНТА</string>
    <string name="arrived">НА МЕСТЕ</string>
    <string name="callClient">ЗВОНОК КЛИЕНТУ</string>
    <string name="doing">ВЫПОЛНЯЮ</string>
    <string name="done">ВЫПОЛНИЛ</string>
    <string name="sort_by_name_a_z">ПО НАЗВАНИЮ А-Я</string>
    <string name="sort_by_name_z_a">ПО НАЗВАНИЮ Я-А</string>
    <string name="sort_by_distance">ПО БЛИЗОСТИ</string>
    <string name="sort_by_queue">ПО КОЛИЧЕСТВУ В ОЧЕРЕДИ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="create">СОЗДАТЬ</string>
    <string name="class_standard">СТАНДАРТ</string>
    <string name="class_business">БИЗНЕС</string>
    <string name="class_premium">ПРЕМИУМ</string>
    <string name="class_no_class">БЕЗ КЛАССА</string>
    <string name="air_condition">КОНДИЦИОНЕР</string>
    <string name="taxometer">ТАКСОМЕТР</string>
    <string name="pets_transportation">ПЕРЕВОЗКА ЖИВОТНЫХ</string>
    <string name="pos_terminal">POS ТЕРМИНАЛ</string>
    <string name="luggage">МНОГО БАГАЖА</string>
    <string name="nosmoking">НЕ КУРИТЬ</string>
    <string name="ok">ОК</string>
    <string name="comments">ПРИМЕЧАНИЕ</string>
    <string name="wifi">Wi-Fi</string>
    <string name="address_deleted">Адрес удален</string>
    <string name="address_cannt_be_deleted">Нет адресов для удаления</string>
    <string name="let_me_in">Стать на стоянку</string>
    <string name="let_me_out">Сняться со стоянки</string>
    <string name="order_is_yours">Заказ Ваш</string>
    <string name="order_is_not_yours">Заказ не Ваш</string>
    <string name="str_balance">Баланс: </string>
    <string name="str_UA_money"> грн.</string>
    <string name="str_use_taxometer_is_not_possible">
        Использование Таксометра невозможно. Включите GPS.</string>
    <string name="str_use_taxometer_need_to_enter">
        Использование Таксометра невозможно. Необходимо войти на смену.</string>
    <string name="str_mock_locations">
        "Похоже что в настройках включен параметр 'фиктивное местоположение' (mock locations). Для работы приложения выключите его!</string>
    <string name="str_notif">Уведомление</string>
    <string name="str_observer_state_driver_free">СВОБОДЕН</string>
    <string name="str_observer_state_driver_busy">ЗАНЯТ</string>
    <string name="str_observer_state_driver_not_connected">НЕ ПОДКЛЮЧЁН</string>
    <string name="str_observer_state_driver_disconnected">ПОТЕРЯ СОЕДИНЕНИЯ</string>
    <string name="str_no_internet_massage">Нет подключения к интернет</string>
    <string name="str_connect_massage">Вы подключены к серверу</string>
    <string name="str_do_you_want_to_exit">Вы действительно хотите выйти?</string>
    <string name="call_to_employer">Связь с заказчиком</string>
    <string name="str_zero_time">00:00</string>
    <string name="str_on_here">На месте</string>
    <string name="str_executing">Выполняю</string>
    <string name="str_no_client">НЕТ КЛИЕНТА</string>
    <string name="str_execute">Выполнил</string>
    <string name="str_address_to">Без адреса</string>
    <!--<string name="str_folder_doing"></string>-->

</resources>
