<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/by_name_a_z"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orangeEditText"
            android:text="@string/sort_by_name_a_z"
            android:gravity="start|center_vertical"
            android:layout_margin="2dp"
            android:paddingLeft="10dp"
            android:background="@drawable/search_dialog_btn_background"/>

        <Button
            android:id="@+id/by_name_z_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orangeEditText"
            android:text="@string/sort_by_name_z_a"
            android:gravity="start|center_vertical"
            android:layout_margin="2dp"
            android:paddingLeft="10dp"
            android:background="@drawable/search_dialog_btn_background"/>

        <Button
            android:id="@+id/by_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orangeEditText"
            android:text="@string/sort_by_distance"
            android:gravity="start|center_vertical"
            android:layout_margin="2dp"
            android:paddingLeft="10dp"
            android:background="@drawable/search_dialog_btn_background"/>

        <Button
            android:id="@+id/by_queue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orangeEditText"
            android:text="@string/sort_by_queue"
            android:gravity="start|center_vertical"
            android:layout_margin="2dp"
            android:paddingLeft="10dp"
            android:background="@drawable/search_dialog_btn_background"/>

    </LinearLayout>



</RelativeLayout>