<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp"
            android:background="@drawable/search_dialog_btn_background">

            <CheckBox
                android:id="@+id/cooler_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:button="@drawable/checkbox_background"/>

            <TextView
                android:id="@+id/cooler_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/air_condition"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp"
            android:background="@drawable/search_dialog_btn_background">

            <CheckBox
                android:id="@+id/taxometer_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:button="@drawable/checkbox_background"/>

            <TextView
                android:id="@+id/taxometer_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/taxometer"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp"
            android:background="@drawable/search_dialog_btn_background">

            <CheckBox
                android:id="@+id/pets_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:button="@drawable/checkbox_background"/>

            <TextView
                android:id="@+id/pets_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pets_transportation"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp"
            android:background="@drawable/search_dialog_btn_background">

            <CheckBox
                android:id="@+id/pos_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:button="@drawable/checkbox_background"/>

            <TextView
                android:id="@+id/pos_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pos_terminal"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp"
            android:background="@drawable/search_dialog_btn_background">

            <CheckBox
                android:id="@+id/luggage_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:button="@drawable/checkbox_background"/>

            <TextView
                android:id="@+id/luggage_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/luggage"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp"
            android:background="@drawable/search_dialog_btn_background">

            <CheckBox
                android:id="@+id/wifi_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:button="@drawable/checkbox_background"/>

            <TextView
                android:id="@+id/wifi_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp"
            android:background="@drawable/search_dialog_btn_background">

            <CheckBox
                android:id="@+id/nosmoking_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:button="@drawable/checkbox_background"/>

            <TextView
                android:id="@+id/nosmoking_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nosmoking"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:text="@string/ok"
        android:layout_marginTop="40dp"
        android:background="@drawable/create_btn_background"/>

</RelativeLayout>